--- a/src/main/res/anim/rotate.xml
+++ b/src/main/res/anim/rotate.xml
@@ -1,9 +1,9 @@
-<set xmlns:android="https://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <rotate android:fromDegrees="0"
         android:toDegrees="360"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="600"
+        android:duration="3000"
         android:repeatMode="restart"
         android:repeatCount="infinite"
         android:interpolator="@android:anim/cycle_interpolator"/>
